--- a/frontend/src/screens/Main.css
+++ b/frontend/src/screens/Main.css
@@ -8,78 +8,9 @@
   overflow: hidden !important;
 }
 
-.trans-left-img {
-  position: absolute;
-  top: 0;
-  width: 60vw;
-  object-position: 50% 50%;
-  height: 100vh;
-  object-fit: cover;
-  pointer-events: none;
-  opacity: 0;
-  z-index: 50;
-  overflow: hidden;
-  left: 0;
-}
-
-.trans-left-img__img {
-  width: 100vw;
-  object-fit: cover;
-  height: 100%;
-  object-position: 50% 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.trans-right-img {
-  position: absolute;
-  top: 0;
-  width: 60vw;
-  object-position: 50% 50%;
-  height: 100vh;
-  object-fit: cover;
-  pointer-events: none;
-  opacity: 0;
-  z-index: 50;
-  overflow: hidden;
-  right: 0;
-}
-
-.trans-right-img__img {
-  width: 100vw;
-  object-fit: cover;
-  height: 100%;
-  object-position: 50% 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.trans-clip {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9999;
-  pointer-events: none;
-  background: radial-gradient(circle at center, transparent 1%, #103a3a 0);
-  background-size: 12000% 12000%;
-  background-position: 50% 50%;
-}
-
-.trans-clip-mask {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  background: #103a3a;
-  transition: all 0.2s ease;
+.main-description {
+  z-index: 10;
+  color: white;
 }
 
 .main-container {
@@ -311,14 +242,26 @@
   left: 10vw;
   color: white;
   font-size: 1vw;
+  opacity: 0;
+}
+
+.middle-menu__description-main.--active {
+  opacity: 1;
+  transition: all 4s ease;
 }
 
 .middle-menu__description-ranking {
   position: absolute;
   top: 34%;
-  left: 40vw;
+  right: -12vw;
   color: white;
   font-size: 1vw;
+}
+
+.middle-menu__description-ranking.--active {
+  font-size: 1vw;
+  transform: translateX(-15vw);
+  transition: all 2s ease;
 }
 
 .middle-menu__description-analysis {
@@ -332,12 +275,6 @@
 .middle-menu__description-analysis.--active {
   font-size: 1vw;
   transform: translateX(17vw);
-  transition: all 2s ease;
-}
-
-.middle-menu__description-ranking.--active {
-  font-size: 1vw;
-  transform: translateX(0vw);
   transition: all 2s ease;
 }
 
