--- a/frontend/src/screens/analysis/SearchPlaceInput.css
+++ b/frontend/src/screens/analysis/SearchPlaceInput.css
@@ -21,10 +21,13 @@
   margin: 0px 0px 0px 7px;
 }
 
-.input_wrap {
+.text_input_wrap {
+  width: 100%;
   height: 50px;
   background: rgb(255, 234, 210, 0.8);
   font-size: 15px;
+  border: 0px;
+  padding: 0px 5px;
 }
 
 .input_wrap.vibration {
